tests/Fixtures/Torture/Bad/cond_str.g
// EXPECT G029
import String;
kernel { entry func Main() { let String s="a"; while (s) { } } }
